# Flux

./: .gitignore  Cargo.toml  LICENSE  NOTES.md  POLISH_AUDIT.md  README.md  SECURITY.md  SESSION_LOG.md
crates/fluid-core/: Cargo.toml
crates/fluid-core/src/: color.rs  error.rs  lib.rs  sensor_data.rs  settings.rs  theme.rs
crates/fluid-ipc/: Cargo.toml
crates/fluid-ipc/src/: lib.rs
crates/fluid-remote/: Cargo.toml
crates/fluid-remote/src/: client.rs  identity.rs  lib.rs  protocol.rs  server.rs  tls.rs
crates/fluid-remote/tests/: loopback.rs
crates/fluid-sensor/: Cargo.toml
crates/fluid-sensor/resources/pawnio/: THIRD-PARTY-LICENSES.md
crates/fluid-sensor/src/: lib.rs  pawnio.rs
crates/fluid-service/: Cargo.toml
crates/fluid-service/src/: main.rs
crates/fluid-setup/: Cargo.toml  build.rs
crates/fluid-setup/src/: engine.rs  main.rs  payload.rs  style.rs
crates/fluid-widget/: Cargo.toml  build.rs
crates/fluid-widget/src/: cpu_driver.rs  firewall.rs  fmt.rs  hotkeys.rs  main.rs  popups.rs  settings_panel.rs  style.rs  tile.rs  updates.rs
crates/flux-core/src/: lib.rs  sensor_data.rs  sensor_ipc.rs  settings.rs
crates/flux-remote/src/: lib.rs
crates/flux-sensor/: Cargo.toml
crates/flux-sensor/src/: d3dkmt.rs  igcl.rs  lib.rs
crates/flux-setup/: build.rs
crates/flux-setup/src/: engine.rs  main.rs
crates/flux-widget/: Cargo.toml  build.rs
crates/flux-widget/src/: color_picker.rs  cpu_driver.rs  fmt.rs  main.rs  popups.rs  sensor_service.rs  settings_panel.rs  style.rs  tile.rs  updates.rs
docs/: INSTALLER.md  RELEASE_TEMPLATE.md
scripts/: Build-Setup.ps1  Scan-VirusTotal.ps1  banner.ps1
