[workspace]
resolver = "2"
members = [
    "crates/fluid-core",
    "crates/fluid-sensor",
    "crates/fluid-ipc",
    "crates/fluid-widget",
    "crates/fluid-service",
    "crates/fluid-setup",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Matt Hakes"]
license = "MIT"
repository = "https://github.com/DruidFluids/fluidMonitor"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
iced = { version = "0.13", features = ["tokio", "svg"] }
sysinfo = "0.34"
directories = "6"
notify = "7"
interprocess = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
