[package]
name = "fluid-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
iced = { version = "0.13", features = ["wgpu"] }
reqwest = { workspace = true, features = ["json", "native-tls"] }
