[package]
name = "fluid-sensor"
version.workspace = true
edition.workspace = true

[dependencies]
fluid-core = { path = "../fluid-core" }
sysinfo = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
nvml-wrapper = "0.12.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
] }
wmi = "0.15"
winreg = "0.56.0"
