[package]
name = "fluid-service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fluidmonitor-service"
path = "src/main.rs"

[dependencies]
fluid-core = { path = "../fluid-core" }
fluid-sensor = { path = "../fluid-sensor" }
fluid-ipc = { path = "../fluid-ipc" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
