[package]
name = "fluid-setup"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fluidmonitor-setup"
path = "src/main.rs"

[dependencies]
fluid-core = { path = "../fluid-core" }
iced = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
